--- a/papers.bib
+++ b/papers.bib
@@ -1,3 +1,16 @@
+@Article{Bae_2018,
+  doi = {10.4196/kjpp.2018.22.3.321},
+  url = {https://doi.org/10.4196/kjpp.2018.22.3.321},
+  year = {2018},
+  publisher = {The Korean Physiological Society and The Korean Society of Pharmacology ({KAMJE})},
+  volume = {22},
+  number = {3},
+  pages = {321},
+  author = {Soo Hyeon Bae and Wan-Su Park and Seunghoon Han and Gab-jin Park and Jongtae Lee and Taegon Hong and Sangil Jeon and Dong-Seok Yim},
+  title = {Physiologically-based pharmacokinetic predictions of intestinal {BCRP}-mediated drug interactions of rosuvastatin in Koreans},
+  journal = {The Korean Journal of Physiology {\&} Pharmacology},
+}
+
 @Article{Choi_2018,
   doi = {10.12793/tcp.2018.26.1.25},
   url = {https://doi.org/10.12793/tcp.2018.26.1.25},
@@ -9,6 +22,19 @@
   author = {Suein Choi and Sangil Jeon and Seunghoon Han},
   title = {Population pharmacokinetic analysis of metformin administered as fixed-dose combination in Korean healthy adults},
   journal = {Translational and Clinical Pharmacology},
+}
+
+@Article{Han_2017,
+  doi = {10.2147/dddt.s134711},
+  url = {https://doi.org/10.2147/dddt.s134711},
+  year = {2017},
+  month = {jul},
+  publisher = {Dove Medical Press Ltd.},
+  volume = {Volume 11},
+  pages = {2099--2107},
+  author = {Seunghoon Han and Gun Hyung Na and Dong-Goo Kim},
+  title = {A 6-month mixed-effect pharmacokinetic model for post-transplant intravenous anti-hepatitis B immunoglobulin prophylaxis},
+  journal = {Drug Design, Development and Therapy},
 }
 
 @Article{Huh_2017,
@@ -35,6 +61,47 @@
   author = {Dooyeon Jang and Seunghoon Han and Dong-Seok Yim},
   title = {Development of an automated appendix generation system ({ARGUS}) for clinical study reports},
   journal = {Translational and Clinical Pharmacology},
+}
+
+@Article{Park_2017,
+  doi = {10.1007/s00280-017-3373-y},
+  url = {https://doi.org/10.1007/s00280-017-3373-y},
+  year = {2017},
+  month = {jun},
+  publisher = {Springer Nature},
+  volume = {80},
+  number = {2},
+  pages = {363--369},
+  author = {Wan-Su Park and Gab-jin Park and Seunghoon Han and Sooho Ban and Moon-Young Park and San-ho Kim and Seon-Myung Kim and Yong-Chul Kim and Hyung Sik Kim and Young G. Shin and Dong-Seok Yim},
+  title = {Human microdosing and mice xenograft data of {AGM}-130 applied to estimate efficacious doses in patients},
+  journal = {Cancer Chemotherapy and Pharmacology},
+}
+
+@Article{Park_2017a,
+  doi = {10.2147/dddt.s131797},
+  url = {https://doi.org/10.2147/dddt.s131797},
+  year = {2017},
+  month = {mar},
+  publisher = {Dove Medical Press Ltd.},
+  volume = {Volume11},
+  pages = {1043--1053},
+  author = {Gab-jin Park and Soo Hyeon Bae and Wan-Su Park and Seunghoon Han and Min-Ho Park and Seok-Ho Shin and Young G. Shin and Dong-Seok Yim},
+  title = {Drug{\&}ndash$\mathsemicolon$drug interaction of microdose and regular-dose omeprazole with a {CYP}2C19 inhibitor and inducer},
+  journal = {Drug Design, Development and Therapy},
+}
+
+@Article{Rajasekaran_2017,
+  doi = {10.1016/j.neo.2017.07.005},
+  url = {https://doi.org/10.1016/j.neo.2017.07.005},
+  year = {2017},
+  month = {oct},
+  publisher = {Elsevier {BV}},
+  volume = {19},
+  number = {10},
+  pages = {735--749},
+  author = {Nirmal Rajasekaran and Hun Soon Jung and Soo Hyeon Bae and Chaithanya Chelakkot and Sungyoul Hong and Jong-Sun Choi and Dong-Seok Yim and Yu-Kyoung Oh and Yoon-La Choi and Young Kee Shin},
+  title = {Effect of {HPV} E6/E7 {siRNA} with Chemotherapeutic Agents on the Regulation of {TP}53/E2F Dynamic Behavior for Cell Fate Decisions},
+  journal = {Neoplasia},
 }
 
 @Article{Yim_2017,
