--- a/papers.Rmd
+++ b/papers.Rmd
@@ -1,3 +1,4 @@
+# PIPET Papers (2017-Present)
 [1] S. H. Bae, D. Yim, H. Lee, et al. "Application of Pharmacometrics in Pharmacotherapy:
 Open-Source Software for Vancomycin Therapeutic Drug Management". In: _Pharmaceutics_ 11.5 (5.
 2019), p. 224. DOI: 10.3390/pharmaceutics11050224. <URL:
