--- a/papers.bib
+++ b/papers.bib
@@ -11,6 +11,34 @@
   journal = {The Korean Journal of Physiology {\&} Pharmacology},
 }
 
+@Article{Bae_2019,
+  doi = {10.3390/pharmaceutics11050224},
+  url = {https://doi.org/10.3390/pharmaceutics11050224},
+  year = {2019},
+  month = {may},
+  publisher = {{MDPI} {AG}},
+  volume = {11},
+  number = {5},
+  pages = {224},
+  author = {Soo Hyeon Bae and Dong-Seok Yim and Hyemi Lee and Ae-Ryoung Park and Ji-Eun Kwon and Hirata Sumiko and Seunghoon Han},
+  title = {Application of Pharmacometrics in Pharmacotherapy: Open-Source Software for Vancomycin Therapeutic Drug Management},
+  journal = {Pharmaceutics},
+}
+
+@Article{Cho_2019,
+  doi = {10.1007/s40259-019-00340-x},
+  url = {https://doi.org/10.1007/s40259-019-00340-x},
+  year = {2019},
+  month = {mar},
+  publisher = {Springer Science and Business Media {LLC}},
+  volume = {33},
+  number = {2},
+  pages = {173--181},
+  author = {Sang-Heon Cho and Seunghoon Han and Jong-Lyul Ghim and Moon-Suk Nam and Sunyoung Yu and Taehong Park and Sinhye Kim and Jihun Bae and Jae-Gook Shin},
+  title = {A Randomized, Double-Blind Trial Comparing the Pharmacokinetics of {CT}-P16, a Candidate Bevacizumab Biosimilar, with its Reference Product in Healthy Adult Males},
+  journal = {{BioDrugs}},
+}
+
 @Article{Choi_2018,
   doi = {10.12793/tcp.2018.26.1.25},
   url = {https://doi.org/10.12793/tcp.2018.26.1.25},
@@ -24,6 +52,20 @@
   journal = {Translational and Clinical Pharmacology},
 }
 
+@Article{Choi_2019,
+  doi = {10.3390/pharmaceutics11070336},
+  url = {https://doi.org/10.3390/pharmaceutics11070336},
+  year = {2019},
+  month = {jul},
+  publisher = {{MDPI} {AG}},
+  volume = {11},
+  number = {7},
+  pages = {336},
+  author = {Suein Choi and Seunghoon Han and Sangil Jeon and Dong-Seok Yim},
+  title = {Quantitative Prediction of Human Pharmacokinetics and Pharmacodynamics of {CKD}519, a Potent Inhibitor of Cholesteryl Ester Transfer Protein ({CETP})},
+  journal = {Pharmaceutics},
+}
+
 @Article{Han_2017,
   doi = {10.2147/dddt.s134711},
   url = {https://doi.org/10.2147/dddt.s134711},
@@ -35,6 +77,19 @@
   author = {Seunghoon Han and Gun Hyung Na and Dong-Goo Kim},
   title = {A 6-month mixed-effect pharmacokinetic model for post-transplant intravenous anti-hepatitis B immunoglobulin prophylaxis},
   journal = {Drug Design, Development and Therapy},
+}
+
+@Article{Han_2018,
+  doi = {10.12793/tcp.2018.26.4.166},
+  url = {https://doi.org/10.12793/tcp.2018.26.4.166},
+  year = {2018},
+  publisher = {Korean Society for Clinical Pharmacology and Therapeutics ({KAMJE})},
+  volume = {26},
+  number = {4},
+  pages = {166},
+  author = {Seunghoon Han and Byounghee Lim and Hyemi Lee and Soo Hyun Bae},
+  title = {Development of a user-friendly training software for pharmacokinetic concepts and models},
+  journal = {Translational and Clinical Pharmacology},
 }
 
 @Article{Huh_2017,
@@ -64,6 +119,19 @@
 }
 
 @Article{Park_2017,
+  doi = {10.2147/dddt.s131797},
+  url = {https://doi.org/10.2147/dddt.s131797},
+  year = {2017},
+  month = {mar},
+  publisher = {Dove Medical Press Ltd.},
+  volume = {Volume11},
+  pages = {1043--1053},
+  author = {Gab-jin Park and Soo Hyeon Bae and Wan-Su Park and Seunghoon Han and Min-Ho Park and Seok-Ho Shin and Young G. Shin and Dong-Seok Yim},
+  title = {Drug{\&}ndash$\mathsemicolon$drug interaction of microdose and regular-dose omeprazole with a {CYP}2C19 inhibitor and inducer},
+  journal = {Drug Design, Development and Therapy},
+}
+
+@Article{Park_2017a,
   doi = {10.1007/s00280-017-3373-y},
   url = {https://doi.org/10.1007/s00280-017-3373-y},
   year = {2017},
@@ -77,17 +145,17 @@
   journal = {Cancer Chemotherapy and Pharmacology},
 }
 
-@Article{Park_2017a,
-  doi = {10.2147/dddt.s131797},
-  url = {https://doi.org/10.2147/dddt.s131797},
-  year = {2017},
-  month = {mar},
-  publisher = {Dove Medical Press Ltd.},
-  volume = {Volume11},
-  pages = {1043--1053},
-  author = {Gab-jin Park and Soo Hyeon Bae and Wan-Su Park and Seunghoon Han and Min-Ho Park and Seok-Ho Shin and Young G. Shin and Dong-Seok Yim},
-  title = {Drug{\&}ndash$\mathsemicolon$drug interaction of microdose and regular-dose omeprazole with a {CYP}2C19 inhibitor and inducer},
-  journal = {Drug Design, Development and Therapy},
+@Article{Polasek_2019,
+  doi = {10.1208/s12248-018-0286-6},
+  url = {https://doi.org/10.1208/s12248-018-0286-6},
+  year = {2019},
+  month = {jan},
+  publisher = {Springer Nature},
+  volume = {21},
+  number = {2},
+  author = {Thomas M. Polasek and Amin Rostami-Hodjegan and Dong-Seok Yim and Masoud Jamei and Howard Lee and Holly Kimko and Jae Kyoung Kim and Phuong Thi Thu Nguyen and Adam S. Darwich and Jae-Gook Shin},
+  title = {What Does it Take to Make Model-Informed Precision Dosing Common Practice? Report from the 1st Asian Symposium on Precision Dosing},
+  journal = {The {AAPS} Journal},
 }
 
 @Article{Rajasekaran_2017,
