--- a/papers.bib
+++ b/papers.bib
@@ -71,7 +71,7 @@
   url = {https://doi.org/10.2147/dddt.s134711},
   year = {2017},
   month = {jul},
-  publisher = {Dove Medical Press Ltd.},
+  publisher = {Informa {UK} Limited},
   volume = {Volume 11},
   pages = {2099--2107},
   author = {Seunghoon Han and Gun Hyung Na and Dong-Goo Kim},
@@ -90,6 +90,18 @@
   author = {Seunghoon Han and Byounghee Lim and Hyemi Lee and Soo Hyun Bae},
   title = {Development of a user-friendly training software for pharmacokinetic concepts and models},
   journal = {Translational and Clinical Pharmacology},
+}
+
+@Article{Han_2019,
+  doi = {10.3389/fphar.2019.01419},
+  url = {https://doi.org/10.3389/fphar.2019.01419},
+  year = {2019},
+  month = {nov},
+  publisher = {Frontiers Media {SA}},
+  volume = {10},
+  author = {Sungpil Han and Seunghoon Han and Ki-Suk Kim and Hyang-Ae Lee and Dong-Seok Yim},
+  title = {Usefulness of Bnet, a Simple Linear Metric in Discerning Torsades De Pointes Risks in 28 {CiPA} Drugs},
+  journal = {Frontiers in Pharmacology},
 }
 
 @Article{Huh_2017,
@@ -123,7 +135,7 @@
   url = {https://doi.org/10.2147/dddt.s131797},
   year = {2017},
   month = {mar},
-  publisher = {Dove Medical Press Ltd.},
+  publisher = {Informa {UK} Limited},
   volume = {Volume11},
   pages = {1043--1053},
   author = {Gab-jin Park and Soo Hyeon Bae and Wan-Su Park and Seunghoon Han and Min-Ho Park and Seok-Ho Shin and Young G. Shin and Dong-Seok Yim},
@@ -136,7 +148,7 @@
   url = {https://doi.org/10.1007/s00280-017-3373-y},
   year = {2017},
   month = {jun},
-  publisher = {Springer Nature},
+  publisher = {Springer Science and Business Media {LLC}},
   volume = {80},
   number = {2},
   pages = {363--369},
@@ -150,7 +162,7 @@
   url = {https://doi.org/10.1208/s12248-018-0286-6},
   year = {2019},
   month = {jan},
-  publisher = {Springer Nature},
+  publisher = {Springer Science and Business Media {LLC}},
   volume = {21},
   number = {2},
   author = {Thomas M. Polasek and Amin Rostami-Hodjegan and Dong-Seok Yim and Masoud Jamei and Howard Lee and Holly Kimko and Jae Kyoung Kim and Phuong Thi Thu Nguyen and Adam S. Darwich and Jae-Gook Shin},
